fix: Change colors to resolve not enough contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #b8b8b8;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -375,4 +375,8 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+#map .leaflet-control-attribution {
+  background: rgba(255, 255, 255, .85);
 }
